@@ -10,7 +10,7 @@ getInstructions<-function(){
   <body>
 
     <h1><b>Instructions</b></h1>
-    <h6><i><b>Version 1.12.5</b></i></h6>
+    <h6><i><b>Version 1.12.6</b></i></h6>
     <br>
 
     <div class='instruction'>
